# sdl2-nanovg-boilerplate

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: application.h  canvas.h  circle.h  graphic.h  loader.h  point.h  polygon.h
src/: CMakeLists.txt  canvas.cpp  circle.cpp  graphic.cpp  point.cpp  polygon.cpp
tests/: CMakeLists.txt  test.cpp
